--- a/styles/style.css
+++ b/styles/style.css
@@ -34,6 +34,7 @@
     color: black; /* Change text color on hover */
 }
 
+/* Body styles */
 body {
     font-family: 'Roboto', sans-serif; 
     background-color: #282c34; 
@@ -43,6 +44,7 @@ body {
     padding: 0;
 }
 
+/* Main container */
 .container {
     width: auto;
     margin: 40px auto;
@@ -52,16 +54,19 @@ body {
     border-radius: 15px; 
 }
 
+/* Header styles */
 h1 {
     color: white; 
 }
 
+/* Instructions */
 .instructions {
     font-size: 20px;
     margin-bottom: 30px;
     color: #adbac7;
 }
 
+/* Game board */
 #game-board {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
@@ -71,6 +76,7 @@ h1 {
     padding: 20px;
 }
 
+/* Game card styles */
 .card {
     width: 211.8px;
     height: 166.2px;
@@ -95,6 +101,7 @@ h1 {
     visibility: visible; /* Show image when card is flipped */
 }
 
+/* Start game button */
 #start-game {
     background-color: #4caf50;
     color: white;
