--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 /* Navbar styles */
@@ -36,9 +37,8 @@
 
 /* Body styles */
 body {
-    font-family: 'Roboto', sans-serif; 
-    background-color: #282c34; 
-    color: #ffffff; 
+    background-color: #282c34; /* Black background color */
+    color: #ffffff; /* White text color */
     text-align: center;
     margin: 0;
     padding: 0;
@@ -49,21 +49,21 @@ body {
     width: auto;
     margin: 40px auto;
     padding: 30px;
-    background-color: #3c404d; 
+    background-color: #3c404d; /* Darker black background color */
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25); 
     border-radius: 15px; 
 }
 
 /* Header styles */
 h1 {
-    color: white; 
+    color: white; /* White text color */
 }
 
 /* Instructions */
 .instructions {
     font-size: 20px;
     margin-bottom: 30px;
-    color: #adbac7;
+    color: #adbac7; /* Lighter white text color */
 }
 
 /* Game board */
@@ -80,7 +80,7 @@ h1 {
 .card {
     width: 211.8px;
     height: 166.2px;
-    background-color: #565c6f;
+    background-color: #565c6f; /* Darker green background color */
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     cursor: pointer;
@@ -103,8 +103,8 @@ h1 {
 
 /* Start game button */
 #start-game {
-    background-color: #4caf50;
-    color: white;
+    background-color: #4caf50; /* Green background color */
+    color: white; /* White text color */
     padding: 36px 48px;
     border: none;
     border-radius: 5px;
@@ -114,7 +114,7 @@ h1 {
 }
 
 #start-game:hover {
-    background-color: #43a047; /* Darker on hover */
+    background-color: #43a047; /* Darker green color on hover */
     transform: scale(1.05); /* Slightly enlarges on hover */
 }
 
