--- a/styles/style.css
+++ b/styles/style.css
@@ -1,126 +1,101 @@
 /* Reset default margin and padding */
 * {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 /* Navbar styles */
 .navbar {
-    background-color: #4CAF50; /* Green background color */
-    overflow: hidden; /* Hide overflow content */
-}
-
-.nav-links {
-    list-style-type: none; /* Remove default list style */
-    margin: 0;
-    padding: 0;
-}
-
-.nav-links li {
-    float: left; /* Float list items horizontally */
-}
-
-.nav-links li a {
-    display: block; /* Display links as block elements */
-    color: white; /* Text color */
-    text-align: center; /* Center align text */
-    padding: 14px 16px; /* Add padding */
-    text-decoration: none; /* Remove underline */
-}
-
-.nav-links li a:hover {
-    background-color: #ddd; /* Add hover background color */
-    color: black; /* Change text color on hover */
-}
-
-/* Body styles */
-body {
-    background-color: #282c34; /* Black background color */
-    color: #ffffff; /* White text color */
-    text-align: center;
-    margin: 0;
-    padding: 0;
-}
-
-/* Main container */
-.container {
-    width: auto;
-    margin: 40px auto;
-    padding: 30px;
-    background-color: #3c404d; /* Darker black background color */
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25); 
-    border-radius: 15px; 
-}
-
-/* Header styles */
-h1 {
-    color: white; /* White text color */
-}
-
-/* Instructions */
-.instructions {
-    font-size: 20px;
-    margin-bottom: 30px;
-    color: #adbac7; /* Lighter white text color */
-}
-
-/* Game board */
-#game-board {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    gap: 20px;
-    justify-content: center;
-    padding: 20px;
-}
-
-/* Game card styles */
-.card {
-    width: 211.8px;
-    height: 166.2px;
-    background-color: #565c6f; /* Darker green background color */
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    cursor: pointer;
+    height: 80px;
+    background-color: #fdcc04;
     display: flex;
+    justify-content: space-between;
     align-items: center;
+    padding: 0rem calc((100vw - 1300px) / 2);
+}
+
+.logo {
+    color: #000;
+    font-size: 1.5rem;
+    font-weight: bold;
+    font-style: italic;
+    padding: 0 2rem;
+}
+
+nav a {
+    text-decoration: none;
+    color: #000;
+    padding: 0 1.5rem;
+}
+
+nav a:hover {
+    color: #fff;
+}
+
+/* Hero styles */
+.hero {
+    background: #fdcc04;
+}
+
+.hero-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    height: 95vh;
+    padding: 3rem calc((100vw - 1300px) / 2);
+}
+
+.column-left {
+    display: flex;
+    flex-direction: column;
     justify-content: center;
-    overflow: hidden;
+    align-items: flex-start;
+    color: #000;
+    padding: 0rem 2rem;
 }
 
-.card img {
-    width: 100%;
-    height: auto;
-    visibility: hidden; /* Hide images by default */
-    display: block;
+.column-left h1 {
+    margin-bottom: 1rem;
+    font-size: 3rem;
 }
 
-.card.show img {
-    visibility: visible; /* Show image when card is flipped */
+.column-left p {
+    margin-bottom: 2rem;
+    font-size: 1.5rem;
+    line-height: 1.5;
 }
 
-/* Start game button */
-#start-game {
-    background-color: #4caf50; /* Green background color */
-    color: white; /* White text color */
-    padding: 36px 48px;
+/* Button styles */
+button {
+    padding: 36px 48px; /* Adjusted padding to match */
+    font-size: 34px; /* Adjusted font size to match */
     border: none;
-    border-radius: 5px;
+    color: #fdcc04;
+    background: #000;
     cursor: pointer;
-    font-size: 34px;
-    transition: background-color 0.3s, transform 0.3s;
+    border-radius: 50px;
 }
 
-#start-game:hover {
-    background-color: #43a047; /* Darker green color on hover */
-    transform: scale(1.05); /* Slightly enlarges on hover */
+button:hover {
+    background: #fff;
+    color: #000;
 }
 
-/* Responsive navigation */
-@media screen and (max-width: 600px) {
-    .nav-links li {
-        float: none; /* Change to vertical layout */
+.column-right {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0rem 2rem;
+}
+
+.hero-image {
+    width: 100%;
+    height: 100%;
+}
+
+@media screen and (max-width: 768px) {
+    .hero-container {
+        grid-template-columns: 1fr;
     }
 }
