--- a/styles/style.css
+++ b/styles/style.css
@@ -35,6 +35,72 @@
     color: black; /* Change text color on hover */
 }
 
+.hero {
+  background: #A9A9A9;
+}
+
+.hero-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  height: 95vh;
+  padding: 3rem calc((100vw - 1300px) / 2);
+}
+
+.column-left {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  color: #000;
+  padding: 0rem 2rem;
+}
+
+.column-left h1 {
+  margin-bottom: 1rem;
+  font-size: 3rem;
+}
+
+.column-left p {
+  margin-bottom: 2rem;
+  font-size: 1.5rem;
+  line-height: 1.5;
+}
+
+button {
+  padding: 1rem 3rem;
+  font-size: 1rem;
+  border: none;
+  color: #fdcc04;
+  background: #000;
+  cursor: pointer;
+  border-radius: 50px;
+}
+
+button:hover {
+  background: #fff;
+  color: #000;
+}
+
+.column-right {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0rem 2rem;
+}
+
+.hero-image {
+  width: 100%;
+  height: 100%;
+}
+
+@media screen and (max-width: 768px) {
+  .hero-container {
+    grid-template-columns: 1fr;
+  }
+}
+
+
+
 /* Body styles */
 body {
     font-family: 'Roboto', sans-serif; 
@@ -119,9 +185,7 @@ h1 {
     transform: scale(1.05); /* Slightly enlarges on hover */
 }
 
-/* Responsive navigation */
-@media screen and (max-width: 600px) {
-    .nav-links li {
-        float: none; /* Change to vertical layout */
     }
 }
+
+
