--- a/styles/style.css
+++ b/styles/style.css
@@ -49,7 +49,7 @@
 .column-left {
   display: flex;
   flex-direction: column;
-  justify-content: left;
+  justify-content: center;
   align-items: flex-start;
   color: #FFFFFF;
   padding: 0rem 2rem;
